7.kubernetes/ingress/middleware.yaml
# kubectl get api-resource 
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nginx-strip-prefix
spec:
  stripPrefix:
    prefixes:
      - /nginx
