7.kubernetes/ingress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-dpl
spec:
  replicas: 4 
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
      - name: nginx-app
        image: nginx:latest
        ports:
        - containerPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-dpl
spec:
  replicas: 4
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
      - name: react-app
        image: 69966/earthdx:78
        ports:
        - containerPort: 80
