7.kubernetes/ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  selector:
    app: nginx-app
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name:  react-svc
spec:
  selector:
    app: react-app
  ports:
  - port: 80
    targetPort: 80
