7.kubernetes/ingress/path-based-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: path-based-ingress
  annotations: 
  # used certmanager with letencrypt to request certificates 
    cert-manager.io/cluster-issuer: letsencrypt-stag
    traefik.ingress.kubernetes.io/router.middlewares: default-nginx-strip-prefix@kubernetescrd
spec:
  ingressClassName: traefik
  # cerficate is for below domain name 
  tls: 
    - hosts:
        - react-k8s-demo.anajak-khmer.site
      secretName: nginx-k8s-demo-secret-testing
  rules:
  - host: react-k8s-demo.anajak-khmer.site
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: react-svc
            port: 
              number: 80
      - pathType: Prefix
        path: "/nginx"
        backend:
          service:
            name: nginx-svc
            port: 
              number: 80
